--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.home.MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:label="@string/app_name">
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
